<resources>
    <string name="app_name">里の图书馆</string>
    <string name="nullname"></string>
    <string name="title_activity_main">里の图书馆</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ic_menu_home">首页</string>
    <string name="ic_menu_lifan">里番</string>
    <string name="ic_menu_lifan_item">里番详情页</string>
    <string name="ic_meun_avmovie">AV系列</string>
    <string name="ic_meun_mmd">MMD</string>
    <string name="ic_menu_setting">设定</string>
    <string name="ic_menu_more">更多</string>
    <string name="ic_menu_testholekiln">试炼洞窑</string>
    <string name="ic_menu_testholekilnvideo">试炼洞窑播放器</string>
    <string name="ic_menu_betatv">BetaTv</string>
    <string name="ic_menu_searchimg">以图搜图</string>
    <string name="versionName">1.0</string>
    <string name="string_kbnsd">看板娘设定</string>
    <string name="string_cdxg">充电相关</string>
    <string name="string_reading">阅读选项</string>
    <string name="string_about">关于</string>
    <string name="title_">null</string>
    <string name="title_1">[ é l ]エル</string>
    <string name="title_10">○○交配</string>
    <string name="title_100">1+2＝パラダイス</string>
    <string name="title_1000">2x1</string>
    <string name="title_1001">3PingLovers</string>
    <string name="title_1002">15美少女漂流記</string>
    <string name="title_1003">21時の女</string>
    <string name="title_1004">69ピンクライダース</string>
    <string name="title_1005">300円のおつきあい</string>
    <string name="title_1006">A KITE</string>
    <string name="title_1007">After… THE ANIMATION</string>
    <string name="title_1008">A-Ko The VS ヴァーサス</string>
    <string name="title_1009">ANGEL CORE～天使たちの住処～</string>
    <string name="title_101">ANGELIUM</string>
    <string name="title_1010">Aサイズ クラスメイト Anime Edition</string>
    <string name="title_1011">BIG WARS 神撃つ朱き荒野に</string>
    <string name="title_1012">Bishoujo Animerama</string>
    <string name="title_1013">BLIND NIGHT</string>
    <string name="title_1014">boin レクチャー</string>
    <string name="title_1015">Brandish</string>
    <string name="title_1016">Bust to Bust -ちちはちちに</string>
    <string name="title_1017">Canvas</string>
    <string name="title_1018">Cherry＆GAL’s↑↑-Episode</string>
    <string name="title_1019">Chu（治癒）してあげちゃう</string>
    <string name="title_102">CLEAVAGE</string>
    <string name="title_1020">CONCERTO</string>
    <string name="title_1021">COSPLAY露出研究会</string>
    <string name="title_1022">D VINE[LUV]</string>
    <string name="title_1023">DARCROWS</string>
    <string name="title_1024">Dark Blue</string>
    <string name="title_1025">Deep Voice</string>
    <string name="title_1026">Discipline</string>
    <string name="title_1027">DISCODE 异常性爱</string>
    <string name="title_1028">DNAハンタ</string>
    <string name="title_1029">dokidokiりとる大家さん</string>
    <string name="title_103">Dragon Rider</string>
    <string name="title_1030">DreamNote</string>
    <string name="title_1031">D-spray</string>
    <string name="title_1032">euphoria</string>
    <string name="title_1033">First Love</string>
    <string name="title_1034">FloatingMaterial</string>
    <string name="title_1035">flutter of birds ～鳥達の羽ばたき～</string>
    <string name="title_1036">G.T.R</string>
    <string name="title_1037">GLO_RI_A グロリア 禁断の血族</string>
    <string name="title_1038">Goldenboy</string>
    <string name="title_1039">G-taste</string>
    <string name="title_104">HEARTWORK</string>
    <string name="title_1040">HHH トリプルエッチ</string>
    <string name="title_1041">Hi.Me.Go.To</string>
    <string name="title_1042">IMMORAL</string>
    <string name="title_1043">Implicity</string>
    <string name="title_1044">Innocent Blue カルテ</string>
    <string name="title_1045">Izumo</string>
    <string name="title_1046">Jewelry</string>
    <string name="title_1047">JKとエロコンビニ店長</string>
    <string name="title_1048">JKとエロ議員センセイ</string>
    <string name="title_1049">JKとオーク兵団</string>
    <string name="title_105">JKと淫行教師4</string>
    <string name="title_1050">JKビッチに搾られたい</string>
    <string name="title_1051">Juliet ジュリエット</string>
    <string name="title_1052">Junk Boy ジャンクボーイ</string>
    <string name="title_1053">JUNK LAND</string>
    <string name="title_1054">KAMYLA</string>
    <string name="title_1055">karen カレン</string>
    <string name="title_1056">KISSより</string>
    <string name="title_1057">Lilitales -リリテイルズ</string>
    <string name="title_1058">LO Re：パコ すくすくみずきちゃん</string>
    <string name="title_1059">Love Selection</string>
    <string name="title_106">LOVELY×CATION</string>
    <string name="title_1060">LUV WAVE</string>
    <string name="title_1061">M.E.M. ～汚された純潔～</string>
    <string name="title_1062">MAGICAL WITCH ACADEMY</string>
    <string name="title_1063">MAID iN HEAVEN</string>
    <string name="title_1064">Maids in Dream</string>
    <string name="title_1065">MaMa</string>
    <string name="title_1066">Maple Colors</string>
    <string name="title_1067">MEZZO FORTE メゾフォルテ</string>
    <string name="title_1068">Mi.da.ra</string>
    <string name="title_1069">MILK ジャンキー</string>
    <string name="title_107">Milkyway</string>
    <string name="title_1070">Misuzu イケナイコトAnime Edition</string>
    <string name="title_1071">MOMOKO</string>
    <string name="title_1072">MOMONE 桃音</string>
    <string name="title_1073">Moonlight Sonata</string>
    <string name="title_1074">MY BLOW JOBER ACT</string>
    <string name="title_1075">MY SWEET ELDER SISTER</string>
    <string name="title_1076">My妹</string>
    <string name="title_1077">M男食い ラストオーダー</string>
    <string name="title_1078">Newmanoid</string>
    <string name="title_1079">ONE～輝く季節へ</string>
    <string name="title_108">OPPAIライフ</string>
    <string name="title_1080">OVA アンスイート</string>
    <string name="title_1081">OVA エッチなお姉ちゃんに搾られたい</string>
    <string name="title_1082">OVA おっぱい学園マーチングバンド部</string>
    <string name="title_1083">OVA ピスはめ！</string>
    <string name="title_1084">OVA 恥辱の制服</string>
    <string name="title_1085">OVA 催眠性指導</string>
    <string name="title_1086">OVA 巨乳J○がオジさんチ○ポとじゅぽじゅぽいやらしいセックスしてます</string>
    <string name="title_1087">OVAヴァルキリーハザード</string>
    <string name="title_1088">OVAじょしラク</string>
    <string name="title_1089">OVAセフレ学園</string>
    <string name="title_109">OVAそれでも妻を愛してる2</string>
    <string name="title_1090">OVAたゆたゆ</string>
    <string name="title_1091">OVAちーちゃん開発日記</string>
    <string name="title_1092">OVAデカくてHな俺の姉</string>
    <string name="title_1093">OVAメガネnoメガミ</string>
    <string name="title_1094">OVAヤリチン家庭教師ネトリ報告</string>
    <string name="title_1095">OVAようこそ！スケベエルフの森へ</string>
    <string name="title_1096">OVA大好きな母</string>
    <string name="title_1097">OVA感染ソドム</string>
    <string name="title_1098">OVA巨乳プリンセス催眠</string>
    <string name="title_1099">OVA巨乳大家族催眠</string>
    <string name="title_11">OVA妻が綺麗になったワケ</string>
    <string name="title_110">OVA屈辱</string>
    <string name="title_1100">OVA色情教団</string>
    <string name="title_1101">OVA妖魔娼館へようこそ</string>
    <string name="title_1102">OVA義姉はヤンママ授乳中</string>
    <string name="title_1103">Pia☆キャロットへようこそ!!</string>
    <string name="title_1104">Pigeon Blood ピジョンブラッド</string>
    <string name="title_1105">PINKERTON</string>
    <string name="title_1106">PRETTY×CATION THE ANIMATION</string>
    <string name="title_1107">Princess Holida</string>
    <string name="title_1108">Princess Memory</string>
    <string name="title_1109">Pure Mail</string>
    <string name="title_111">Refrain Blue</string>
    <string name="title_1110">REQUIEM</string>
    <string name="title_1111">Reunion</string>
    <string name="title_1112">Rhythm ～恋の律動～</string>
    <string name="title_1113">RIN×SEN</string>
    <string name="title_112">Rune’sPharmacy</string>
    <string name="title_113">SCHOOL</string>
    <string name="title_114">SECRET JOURNEY</string>
    <string name="title_115">SeeIn青 scene</string>
    <string name="title_116">SEXFRIEND</string>
    <string name="title_117">SINKAN シンカン</string>
    <string name="title_118">SMノススメ</string>
    <string name="title_119">SOAPのMOKOちゃん</string>
    <string name="title_12">STAIR スタイアー 放課後のアルバム</string>
    <string name="title_120">STAR☆jewel スタージュエル</string>
    <string name="title_121">STARLESS</string>
    <string name="title_122">SWAMP STAMP</string>
    <string name="title_123">Sweet Home ～Hなお姉さんは好きですか</string>
    <string name="title_124">Swing Out Sisters</string>
    <string name="title_125">Tentacle and Witches</string>
    <string name="title_126">The Pianist ピアニスト</string>
    <string name="title_127">THE ガッツ</string>
    <string name="title_128">Tinderbox</string>
    <string name="title_129">Tiny Evil</string>
    <string name="title_13">TOKIO機動ポリス</string>
    <string name="title_130">TRUE BLUE トゥルーブル</string>
    <string name="title_131">TSF物語</string>
    <string name="title_132">V.G.NEO</string>
    <string name="title_133">VIPER -GTS-</string>
    <string name="title_134">WAKE UP! アリア</string>
    <string name="title_135">Wanna. SpartanSex</string>
    <string name="title_136">WAVER</string>
    <string name="title_137">WiZARD GiRL AMBiTiOUS</string>
    <string name="title_138">WORDS WORTH</string>
    <string name="title_139">YU-NO</string>
    <string name="title_14">Zero Sum Game</string>
    <string name="title_140">Zトン人外アニメーション</string>
    <string name="title_141">あい☆きゃん</string>
    <string name="title_142">アイカギ</string>
    <string name="title_143">アイドル☆シスタ</string>
    <string name="title_144">アイドル候補生</string>
    <string name="title_145">アイドル強制操作</string>
    <string name="title_146">アイベヤ</string>
    <string name="title_147">アイルMANIAX～淫魔制服狩り</string>
    <string name="title_148">アウトランダーズ</string>
    <string name="title_149">アキバ系彼女</string>
    <string name="title_15">あしたの雪之丞</string>
    <string name="title_150">アスガルド～歪曲のテスタメント～</string>
    <string name="title_151">アッガ.ルター</string>
    <string name="title_152">アドバンサー ティナ</string>
    <string name="title_153">あなたの知らない看護婦</string>
    <string name="title_154">あねいも</string>
    <string name="title_155">アネキの口内解禁日</string>
    <string name="title_156">あねちじょマックスハート</string>
    <string name="title_157">あねよめカルテット</string>
    <string name="title_158">アノコトイイコト</string>
    <string name="title_159">あの団地の妻たちは…</string>
    <string name="title_16">アマカノ</string>
    <string name="title_160">アマネェ</string>
    <string name="title_161">あらいめんとゆーゆー</string>
    <string name="title_162">アラルガンド</string>
    <string name="title_163">アリスドール 聖少.女玩具</string>
    <string name="title_164">アルバイトしよっ！！</string>
    <string name="title_165">アンダーワールド閻魔国</string>
    <string name="title_166">アンバランス</string>
    <string name="title_167">いいなり！催眠彼女 ～隷属洗脳.生ハメ性活</string>
    <string name="title_168">イエナイコト 2nd scene Anime Edition</string>
    <string name="title_169">イエナイコト THE ANIMATION</string>
    <string name="title_17">イケナイBOY</string>
    <string name="title_170">イケナイコト</string>
    <string name="title_171">いちごショコラふれーば</string>
    <string name="title_172">イノセント～少女メモリア～</string>
    <string name="title_173">イマコシステム</string>
    <string name="title_174">ヴァンパイア</string>
    <string name="title_175">ヴィーナスブラッド-ブレイヴ</string>
    <string name="title_176">ヴィクトリアメイド マリアの奉仕</string>
    <string name="title_177">ヴィジョナリィ</string>
    <string name="title_178">エーベンブルグの風</string>
    <string name="title_179">エスパー美少女まなみ</string>
    <string name="title_18">えっちーず</string>
    <string name="title_180">えなじぃキョーカ</string>
    <string name="title_181">エルフィーナ</string>
    <string name="title_182">エルフの教え子と先生</string>
    <string name="title_183">エルフの若奥様</string>
    <string name="title_184">エルフの双子姫</string>
</resources>