<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/ic_menu_home" />
        <item
        android:id="@+id/nav_lifan"
        android:icon="@drawable/ic_menu_lifan"
        android:title="@string/ic_menu_lifan" />
        <item
            android:id="@+id/nav_avmovie"
            android:icon="@drawable/ic_menu_avmovie"
            android:title="@string/ic_meun_avmovie" />
        <item
            android:id="@+id/nav_mmd"
            android:icon="@drawable/ic_menu_mmd"
            android:title="MMD"/>
    </group>

</menu>
